--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
 body {
-  /* background-image: url(assets/jungle.jpeg); */
-  /* background: rgb(202, 46, 46); */
   align-items: center;
   justify-content: center;
-  /* border: 20px solid#000000; */
   background: url(assets/snakeSkin.jpg);
-  /* height: 100vh; */
   width: 100%;
+  margin: 0;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -31,11 +28,11 @@ h1 {
 
 h2 {
   text-align: center;
-    font-family: 'Dancing Script', cursive;
-    font-size: 45px;
-    font-weight: bold;
-    margin: 40px;
-    color: blue;
+  font-family: 'Dancing Script', cursive;
+  font-size: 45px;
+  font-weight: bold;
+  margin: 40px;
+  color: blue;
   -webkit-text-stroke: 1px rgb(243, 72, 72);
   text-shadow:
       3px 3px 0 gold,
@@ -51,10 +48,7 @@ h2 {
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
-  /* grid-gap: 10px; */
   padding: 20px;
-  /* border: 20px solid rgb(0, 0, 0); */
-  /* background-color: rgb(214, 135, 45); */
   grid-template-columns: repeat(2, 2fr);
   margin: 80px;
   width: auto;
@@ -99,15 +93,10 @@ button:hover {
    }
  }
 
-html, body {
-  /* height: 100%; */
-  margin: 0;
-}
-
 canvas {
   border: 40px solid rgb(235, 32, 32);
 }
 
 #game{
-  border-style: double; border-color: aquamarine;
+  border-style: double; border-color: rgb(20, 210, 235);
 }
