--- a/css/old-style.css
+++ b/css/old-style.css
@@ -12,15 +12,15 @@ body {
 
 h1 {
   text-align: center;
-    font-family: 'Dancing Script', cursive;
-    font-size: 60px;
-    font-weight: bold;
-    margin: 0px;
-    color: blue;
+  font-family: 'Dancing Script', cursive;
+  font-size: 60px;
+  font-weight: bold;
+  margin: 0px;
+  color: blue;
   -webkit-text-stroke: 1px rgb(243, 72, 72);
   text-shadow:
       3px 3px 0 gold,
-    -1px -1px 0 #0bd074,  
+    -1px -1px 0 #0bd074,
      1px -1px 0 #bee716,
      -1px 1px 0 #ec0ca5,
       1px 1px 0 #02c7f8;
@@ -36,16 +36,14 @@ h2 {
   -webkit-text-stroke: 1px rgb(243, 72, 72);
   text-shadow:
       3px 3px 0 gold,
-    -1px -1px 0 #0bd074,  
+    -1px -1px 0 #0bd074,
      1px -1px 0 #bee716,
      -1px 1px 0 #ec0ca5,
       1px 1px 0 #02c7f8;
 }
 
-.instructions {
-  color: white;
-}
 .grid-container {
+  background-color: black;
   display: grid;
   grid-template-columns: auto auto auto auto;
   padding: 20px;
@@ -56,26 +54,26 @@ h2 {
 }
 
 .grid-container > div {
-background-color: rgb(0, 0, 0);
 text-align: center;
 padding: 20px 0;
 font-size: 24px;
 font-family: Arial, Helvetica, sans-serif
 }
 
-.buttons {
-  text-align: center;
-  
+canvas {
+  border: 40px solid rgb(20, 210, 235);
 }
 
-.pause, buttons {
-  background-color: rgb(0, 0, 0);
-  border: 5px solid rgb(255, 255, 255);
+#game{
+  border-style: double; border-color: rgb(20, 210, 235);
+}
+
+.instructions {
   color: white;
-  padding: 25px 25px;
+}
+
+.buttons {
   text-align: center;
-  display: inline-block;
-  font-size:30px;
 }
 
 button:hover {
@@ -83,9 +81,8 @@ button:hover {
   transition-timing-function: ease-in-out;
   color: white;
   transition-duration: 1s;
-  background-color: #000000;
-
-}  
+  background-color: black
+}
 
 @media screen and (min-width: 414px) and (max-width: 736px){
   .div-only-mobile{
@@ -93,10 +90,3 @@ button:hover {
    }
  }
 
-canvas {
-  border: 40px solid rgb(235, 32, 32);
-}
-
-#game{
-  border-style: double; border-color: rgb(20, 210, 235);
-}
